user admin give roles and delete users

--- a/frontend/src/app/components/admin/admin-home/admin-home.component.html
+++ b/frontend/src/app/components/admin/admin-home/admin-home.component.html
@@ -9,6 +9,8 @@
 
     <div class="adminComponents">
       <app-movies *ngIf="selectedAdminOption === 'movies'"></app-movies>
+      <app-users *ngIf="selectedAdminOption === 'users'"></app-users>
+
     </div>
   </div>
 </div>
