--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -97,6 +97,16 @@
       font-size: 25px;
       font-weight: bold;
     }
+
+    .user {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+
+      background-position: 50% 20%;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   }
 
 }
