--- a/frontend/src/app/components/contact/contact.component.scss
+++ b/frontend/src/app/components/contact/contact.component.scss
@@ -1,46 +1,88 @@
+.contactForm {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   form {
-    max-width: 500px;
-    margin: 20px auto;
-  }
-
-  label, input, textarea {
-    display: block;
-    margin-bottom: 10px;
-  }
-
-  input, textarea {
+    margin-top: 10px;
     width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
+    background: var(--light-background-color);
+    border-radius: 10px;
+    padding: 10px;
   }
 
-  button {
-    background-color: var(--green-button-color);
-    color: var(--white-app-color);
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
+  .formLabel {
+    color: var(--black-text-color);
+    font-size: 15px;
+    margin-bottom: 5px;
   }
 
-  button:hover {
-    background-color: var(--green-button-color-hover);
-  }
-  
-  .mainComponent {
-    padding: 20px;
-    .border {
-        width: 90%;
-        margin: auto;
-        min-width: fit-content;
-        padding: 20px;
-        background: var(--light-background-color);
-        box-shadow: 0 0 3px var(--shadow-grey-color);
-        border-radius: 10px;
-        .pageTitle {
-            color: var(--black-text-color);
-            font-weight: bold;
-            font-size: 25px;
-            margin-bottom: 5%;
-        }
+
+  .formInput {
+    margin-bottom: 5px;
+    background: var(--white-app-color);
+    width: 100%;
+    min-width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid var(--blue-app-color);
+    border-radius: 10px;
+    padding: 10px 0;
+    img {
+      width: 30px;
+      height: 30px;
+      margin: 0 10px;
     }
+    input {
+      width: 100%;
+      border: none;
+      outline: none;
+      margin-right: auto;
+      font-size: 20px;
+      letter-spacing: .2em;
+      color: var(--blue-app-color);
+      caret-color: var(--blue-app-color);
+    }
+  }
+
+  .buttonRow {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    p {
+      margin-right: auto;
+      cursor: pointer;
+      color: var(--blue-app-color);
+      font-size: 18px;
+    }
+    button {
+      background: var(--blue-app-color);
+      border-radius: 10px;
+      border: none;
+      color: var(--white-app-color);
+      font-weight: bold;
+      padding: 10px;
+    }
+  }
+
 }
+
+.invalidInput {
+  border-color: var(--red-color) !important;
+  color: var(--red-color) !important;
+  input {
+    color: var(--red-color) !important;
+    caret-color: var(--red-color);
+  }
+
+  img {
+    filter: invert(14%) sepia(82%) saturate(7387%) hue-rotate(5deg) brightness(97%) contrast(117%);
+  }
+}
+
