--- a/frontend/src/app/pages/main/main.component.html
+++ b/frontend/src/app/pages/main/main.component.html
@@ -1,6 +1,6 @@
 <app-login *ngIf="showLoginValue" (showLoginEmitter)="showLoginFunction('login',$event)"></app-login>
 <app-movie-info *ngIf="showHideMovieInfoValue" (showMovieInfo)="showHideMovieInfo(false)" [movie]="movieInfo" ></app-movie-info>
-
+<app-contact *ngIf="showContact" (showContactEmitter)="showContactFunction()"></app-contact>
 <div class="mainPage">
   <div class="header">
   <!-- Header -->
@@ -13,7 +13,6 @@
 
     <div class="viewComponent">
       <app-home *ngIf="selectedComponent==='home'" (movieInfoEmitter)="openInfoModal($event)"></app-home>
-      <app-contact *ngIf="selectedComponent==='contact'"></app-contact>
       <app-admin-home *ngIf="selectedComponent==='admin'"></app-admin-home>
     </div>
 
