--- a/frontend/src/app/components/screening/seats/seats.component.html
+++ b/frontend/src/app/components/screening/seats/seats.component.html
@@ -8,7 +8,7 @@
   <div class="rows" *ngFor="let row of chosenScreening.auditoriumInfo.rows, let i = index">
     <div class="rowLabel">{{row}}</div>
     <div class="seats" *ngFor="let seat of [].constructor(helper.returnNumber(chosenScreening.auditoriumInfo.seats[i])), let j = index">
-      <div (click)="selectSeat(row,j)" [ngClass]="checkIfSelected(row, j) ? 'selected' : ''" class="seat cursor">{{j+1}}</div>
+      <div (click)="selectSeat(row,j)" [ngClass]="checkIfReserved(row, j) ? 'disabled' : ''" [ngClass]="checkIfSelected(row, j) ? 'selected' : ''" class="seat cursor">{{j+1}}</div>
     </div>
     <br>
   </div>
