--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -192,6 +192,6 @@ p {
 
 
 .disabled {
-  opacity: 0.6;
-  pointer-events: none;
+  opacity: 0.6 !important;
+  pointer-events: none !important;
 }
