Contact page for admin

--- a/frontend/src/app/components/admin/admin-home/admin-home.component.html
+++ b/frontend/src/app/components/admin/admin-home/admin-home.component.html
@@ -10,6 +10,7 @@
     <div class="adminComponents">
       <app-movies *ngIf="selectedAdminOption === 'movies'"></app-movies>
       <app-users *ngIf="selectedAdminOption === 'users'"></app-users>
+      <app-contacts *ngIf="selectedAdminOption === 'contact'"></app-contacts>
 
     </div>
   </div>
