--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -30,9 +30,11 @@
     justify-content: space-evenly;
     width: 40%;
     div {
+      min-width: 50px;
       display: flex;
       align-items: center;
       justify-content: space-evenly;
+      flex-wrap: wrap;
       img {
         width: 30px;
         height: 30px;
@@ -42,6 +44,8 @@
         color: var(--white-app-color);
         font-weight: bold;
         font-size: 20px;
+        margin-right: 15px;
+
       }
     }
   }
