--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -2,13 +2,13 @@
 
   <div class="logo cursor" (click)="changeView('home')">
     <img src="assets/imgs/header/popcorn.png"/>
-    <p>{{'pageTitle.title' | translate}}</p>
+    <p *ngIf="screenWidth > 1200">{{'pageTitle.title' | translate}}</p>
   </div>
 
   <div class="optionsContent">
     <div class="cursor" *ngFor="let option of headerOptions" (click)="changeView(option.id)">
       <img class="whiteIcon" [src]="option.img" />
-      <p *ngIf="screenWidth > 1100">{{option.descr | translate}}</p>
+      <p *ngIf="screenWidth > 1200">{{option.descr | translate}}</p>
     </div>
   </div>
 
