--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -45,7 +45,7 @@
         font-weight: bold;
         font-size: 20px;
         margin-right: 15px;
-
+        text-align: center;
       }
     }
   }
