--- a/frontend/src/app/components/movie-info/movie-info.component.scss
+++ b/frontend/src/app/components/movie-info/movie-info.component.scss
@@ -1,32 +1,34 @@
 .modalInfo {
   width: 100%;
-  min-height: 500px;
   height: auto;
-  max-height: 800px;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-
+  flex-wrap: wrap;
   .movieImg {
-    width: 30%;
-    min-height: 500px;
-    height: auto;
-    max-height: 800px;
-    background-position: 50% 50%;
+    width: 100%;
+    min-width: 200px;
+    min-height: 50px;
+    height: 50vh;
+    max-height: 400px;
+    background-position: 50% 20%;
     background-repeat: no-repeat;
     background-size: cover;
   }
   .movieInfo {
-    width: 70%;
-    padding: 0 15px;
+    width: 100%;
+    padding: 15px 0;
 
     .durationCategoryRatingsDiv {
       width: 100%;
+      min-width: 200px;
       display: flex;
       align-items: center;
       justify-content: flex-start;
+      flex-wrap: wrap;
       margin: 10px 0;
       .duration {
+        min-width: 50px;
         padding: 10px;
         display: flex;
         align-items: center;
@@ -48,6 +50,8 @@
     }
 
     .ratings {
+      min-width: 100px;
+
       margin-left: auto;
       width: fit-content;
       display: flex;
@@ -64,8 +68,8 @@
   .additionalInfo {
     background: var(--light-background-color);
     border-radius: 10px;
-    padding: 10px;
-    width: 70%;
+    // padding: 10px;
+    width: 100%;
     table {
       width: 100%;
       th {
@@ -80,19 +84,14 @@
     }
   }
 }
-
-.buttonRow {
+.reservationButton {
+  min-width: 100px;
   width: 100%;
-  justify-content: flex-end;
-  display: flex;
-  margin-top: 5%;
-  button {
-    min-width: 100px;
-    background: var(--blue-app-color);
-    border-radius: 10px;
-    border: none;
-    color: var(--white-app-color);
-    font-weight: bold;
-    padding: 10px;
-  }
+  margin-right: auto;
+  background: var(--blue-app-color);
+  border-radius: 10px;
+  border: none;
+  color: var(--white-app-color);
+  font-weight: bold;
+  padding: 10px;
 }
