--- a/frontend/src/app/components/screening/screening.component.scss
+++ b/frontend/src/app/components/screening/screening.component.scss
@@ -128,3 +128,67 @@
     }
   }
 }
+
+.dateRoomVertical {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  .movieImgLine {
+    width: 100%;
+    min-height: 300px;
+    height: auto;
+    max-height: 800px;
+    background-position: 50% 20%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .reservationDiv {
+    padding: 15px 0;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+  }
+  .date {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .rooms {
+    width: 65%;
+  }
+  .buttonRow {
+    padding: 10px 0;
+    width: 98%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    outline: none;
+    margin: auto auto 0 auto;
+    button {
+      width: 30%;
+      padding: 10px;
+      outline: none;
+      cursor: pointer;
+      border-radius: 15px;
+      font-weight: bold;
+    }
+
+    .previousButton {
+      background: var(--light-background-color);
+      color: var(--blue-app-color);
+      border: 2px solid var(--blue-app-color);
+    }
+
+    .continueButton {
+      margin-left: auto;
+      background: var(--blue-app-color);
+      color: var(--white-app-color);
+    }
+  }
+}
