--- a/frontend/src/app/components/screening/screening.component.html
+++ b/frontend/src/app/components/screening/screening.component.html
@@ -6,7 +6,7 @@
     <div class="modal-content">
       <div class="modalTitle">
         <p>Έκδοση Εισιτηρίου</p>
-        <div class="modalClose" (click)="changeDate()">
+        <div class="modalClose" (click)="closeModal('cancel')">
           <img src="assets/imgs/general/close.svg"/>
         </div>
       </div>
