--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="backdrop">
 </div>
 
-<div class="modal">
+<div class="modal" style="z-index: 1000000000000000000000000000000000000000000000;">
   <div class="modal-wrapper">
     <div class="modal-content">
       <div class="modalTitle">
