--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -52,6 +52,8 @@ p {
 }
 .modal-wrapper-big {
   width: 80% !important;
+  max-width: 1200px !important;
+
   min-width: 400px;
 
 }
@@ -59,6 +61,7 @@ p {
   // top: 0;
   width: 50%;
   min-width: 350px;
+  max-width: 700px;
   margin: auto;
 
   .modal-content {
