--- a/frontend/src/app/components/screening/screening.component.scss
+++ b/frontend/src/app/components/screening/screening.component.scss
@@ -46,6 +46,7 @@
       font-size: 15px;
       text-align: center;
       color: var(--blue-app-color);
+      width: 30%;
     }
     div:not(:last-child) {
       margin-right: calc(100%/2 - 120px);
