--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -150,23 +150,21 @@
   flex-direction: column;
 
   button {
-    width: 50%;
-    min-width: fit-content;
-    border-radius: 15px;
+    width: 200;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 15px;
+    padding: 5px;
     outline: none;
     cursor: pointer;
     img {
       width: 30px;
       height: 30px;
-      margin-right: 15px;
+      margin-right: 5px;
     }
     p {
-      font-size: 20px;
-      font-weight: bold;
+      font-size: 15px;
     }
   }
 
