--- a/frontend/src/app/components/admin/admin-home/admin-home.component.scss
+++ b/frontend/src/app/components/admin/admin-home/admin-home.component.scss
@@ -17,6 +17,10 @@
     justify-content: flex-start;
   }
 
+  .adminComponents {
+    width: 100%;
+  }
+
   .optionsContent {
     margin: 0 auto;
     display: flex;
