bug fix to the bug fix

--- a/frontend/src/app/components/admin/admin-home/admin-home.component.html
+++ b/frontend/src/app/components/admin/admin-home/admin-home.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
 
-    <div class="adminComponents">
+    <div class="adminComponents" style="width: 100%;">
       <app-movies *ngIf="selectedAdminOption === 'movies'"></app-movies>
       <app-users *ngIf="selectedAdminOption === 'users'"></app-users>
       <app-admin-screening *ngIf="selectedAdminOption === 'screening'"></app-admin-screening>
