--- a/frontend/src/app/components/admin/admin-home/admin-home.component.scss
+++ b/frontend/src/app/components/admin/admin-home/admin-home.component.scss
@@ -1,5 +1,6 @@
 .mainComponent {
   box-shadow: 0 0 5px solid var(--shadow-grey-color);
+  padding: 10px 0;
   border-radius: 10px;
   width: 100%;
   background: var(--white-app-color);
@@ -7,12 +8,11 @@
 
   .adminContainer {
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     flex-wrap: wrap;
     height: 100%;
     padding: 0 10px;
-    padding-top: 10px;
     overflow-y: scroll;
     justify-content: flex-start;
   }
