--- a/frontend/src/app/components/admin/users/users.component.scss
+++ b/frontend/src/app/components/admin/users/users.component.scss
@@ -2,8 +2,8 @@
   width: 100%;
   margin-top: 15px;
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   .adminTitle {
     color: var(--blue-app-color);
     font-size: 30px;
