--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -70,6 +70,7 @@ p {
     border-radius: 10px;
     padding: 10px;
     min-height: 300px;
+    max-height: 700px;
     overflow-y: scroll;
     overflow-x: clip;
     .modalTitle {
